# Email-Phone-Number-Enrichment-Tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCRAPER_PORTFOLIO_README.md  config.example.yaml  config.yaml  enricher.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Assets/: sample_output.csv
core/: __init__.py  _log.py  browser_utils.py  controls.py  email_utils.py  http_utils.py  storage.py
tests/: test_core.py
